Changed the end of two cases, the content

--- a/case1.html
+++ b/case1.html
@@ -604,6 +604,51 @@
 					</div>
 				</div>
 			</div>
+       <!-- If continued -->
+			<div class="container">
+				<div class="twocol twocol--wide">
+					<h3 class="twocol__heading">If continued…</h3>
+					<div class="twocol__main">
+						<p class="add-small-margin-bottom">Future improvements I envisioned:</p>
+						<ul>
+							<li>Tooltips for complex medical terms</li>
+							<li>Separate flows for caregivers vs. older children</li>
+							<li>Visual enhancements and emotional cues</li>
+							<li>Options for disclosing sensory or neurodiverse needs</li>
+						</ul>
+						<p>This project solidified my confidence in independently leading complex, high-impact design work.</p>
+
+            <!-- Findings from parents -->
+              <div class="insight-card add-small-margin-bottom">
+                <div class="insight-card__header">
+                  <div class="icon-box icon-box-green">
+                    <img
+                      src="./assets/icons/sparkles.svg"
+                      alt=""
+                      class="icon-box__icon"
+                      width="24"
+                      height="24"
+                    />
+                  </div>
+                  <h4 class="insight-card__title">Leveraging AI</h4>
+                </div>
+                <ul class="insight-card__list">
+                  <li>This project was created before user-facing AI became widely adopted. While it includes a natural language summary output, it doesn’t require users to interact with AI directly.</li>
+                  <li>If I were approaching this project today, <strong>I’d advocate for adding an AI-powered chat</strong> (resources permitting) that lets users communicate with an AI triage nurse. This could capture more nuance about the patient's condition and allow users to describe the situation in their own words.</li>
+                  <li>This AI nurse chat would be <strong>optional</strong> in addition to the existing screener. Here’s why:
+                    <ul>
+                      <li>Some users may feel uncomfortable sharing personal medical information with AI</li>
+                      <li>Other users may struggle to verbalize symptoms clearly and multiple-choice questions can provide guidance</li>
+                      <li>AI is still evolving and may produce errors or unpredictable outputs</li>
+                      <li>In high-stakes environments like healthcare, redundancy is essential</li>
+                      <li>Structured and conversational multiple input options support more inclusive design for different communication needs</li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+					</div>
+				</div>
+			</div>
       <!-- Impact and learnings -->
 			<div class="container">
 				<div class="twocol twocol--wide">
@@ -621,22 +666,7 @@
 					</div>
 				</div>
 			</div>
-      <!-- If continued -->
-			<div class="container">
-				<div class="twocol twocol--wide">
-					<h3 class="twocol__heading">If continued…</h3>
-					<div class="twocol__main">
-						<p class="add-small-margin-bottom">Future improvements I envisioned:</p>
-						<ul>
-							<li>Tooltips for complex medical terms</li>
-							<li>Separate flows for caregivers vs. older children</li>
-							<li>Visual enhancements and emotional cues</li>
-							<li>Options for disclosing sensory or neurodiverse needs</li>
-						</ul>
-						<p class="add-big-margin-bottom">This project solidified my confidence in independently leading complex, high-impact design work.</p>
-					</div>
-				</div>
-			</div>
+     
     </section>
   </main>
 
