--- a/case2.html
+++ b/case2.html
@@ -628,13 +628,40 @@
             <dd class="case-context__desc">
               <p>While the redesign had not launched at the time I exited the company, early indicators were promising:</p>
               <ul class="case-context__list">
-                
                 <li>In-app onboarding walkthroughs for new users</li>
                 <li>More refined personalization based on user activity, including a personalized activity plan and goal-setting</li>
                 <li>Enhanced voice interaction features for accessibility for users who may struggle to type</li>
               </ul>
-            </dd>
+              <!-- Leveraging AI -->
+              <div class="insight-card add-small-margin-top">
+                <div class="insight-card__header">
+                  <div class="icon-box icon-box-green">
+                    <img
+                      src="./assets/icons/sparkles.svg"
+                      alt=""
+                      class="icon-box__icon"
+                      width="24"
+                      height="24"
+                    />
+                  </div>
+                  <h4 class="insight-card__title">Leveraging AI</h4>
+                </div>
+                <ul class="insight-card__list">
+                  <li>The original app included light AI features, like AI-generated summaries for resources, but there's room to push it further.</li>
+                  <li>If continued, I’d explore:
+                    <ul>
+                      <li>A opt-in assistant to share recommendations, track progress, and encourage the user. The assistant could also answer the users’ health questions, phrasing the answers in an understanding, non-judgemental, and reassuring tone</li>
+                      <li>Summaries to help caregivers easily stay informed as to their loved ones’ progress</li>
+                      <li>AI-powered mood check-ins that would suggest users exercises to complete based on what they share</li>
+                      <li>Smart routine builders based on the content the user consumes and the activities they complete</li>
+                    </ul>
+                  </li>
+                  <li>These features would act as add-ons, designed with opt-ins and transparency while keeping the older audience in mind.</li>
+                </ul>
+              </div>
+            </dd> 
           </div>
+          
           <div class="case-context__item">
             <dt class="case-context__term">Learnings</dt>
             <dd class="case-context__desc case-context__desc-last">
