Change some test

--- a/case1.html
+++ b/case1.html
@@ -163,9 +163,9 @@
               <ul class="case-context__list">
                 <li>Mapping the full triage journey with clinicians and admin staff</li>
                 <li>Conducting competitor and paper research</li>
-                <li>Co-designed patient-facing flows for TVs and tablets with the clinical team</li>
-                <li>Designed high-contrast, WCAG-compliant UI to support quick scanning in high-stress settings</li>
-                <li>Collaborated closely with a PM and devs to ensure feasibility within clinical constraints</li>
+                <li>Co-designing patient-facing flows for TVs and tablets with the clinical team</li>
+                <li>Designing high-contrast, WCAG-compliant UI to support quick scanning in high-stress settings</li>
+                <li>Collaborating closely with a PM and devs to ensure feasibility within clinical constraints</li>
               </ul>
             </dd>
           </div>
@@ -618,7 +618,7 @@
 						</ul>
 						<p>This project solidified my confidence in independently leading complex, high-impact design work.</p>
 
-            <!-- Findings from parents -->
+            <!-- Leveraging AI -->
               <div class="insight-card add-small-margin-bottom">
                 <div class="insight-card__header">
                   <div class="icon-box icon-box-green">
