Start work on a side menu on desktop

--- a/case2.html
+++ b/case2.html
@@ -64,6 +64,18 @@
     </nav>
   </aside>
 
+  <aside class="case-sidenav" id="case-sidenav">
+  <nav>
+    <ul>
+      <li><a href="#nav-overview">Overview</a></li>
+      <li><a href="#nav-solution">Solution</a></li>
+      <li><a href="#nav-design">Design</a></li>
+      <li><a href="#nav-impact">Impact</a></li>
+    </ul>
+  </nav>
+</aside>
+
+
   <!-- Main Case Content -->
   <main>
     <!-- Hero -->
@@ -91,6 +103,7 @@
     </section>
 
     <!-- Overview -->
+    <a id="nav-overview"></a>
     <section class="case-overview" aria-labelledby="case-overview-title">
       <div class="container case-overview__content">
         <!-- Left column -->
@@ -165,6 +178,7 @@
     </section>
 
     <!-- How Might We -->
+    <a id="nav-solution"></a>
     <section class="case-howmightwe" aria-labelledby="case-howmightwe-title">
       <div class="container">
         <h2 id="case-howmightwe-title" class="case-howmightwe__heading">
@@ -383,6 +397,7 @@
     
 
     <!-- Highlights -->
+    <a id="nav-design"></a>
     <section class="case-highlights case-highlights--case2" aria-labelledby="case-highlights-title">
       <div class="container">
         <h2 id="case-highlights-title" class="case-highlights__title">
@@ -605,6 +620,7 @@
     
 
     <!-- What does it all come down to?-->
+    <a id="nav-impact"></a>
    <section class="case-context" aria-labelledby="case-context-title">
       <div class="container case-context__content">
         <h2 id="case-context-title" class="case-context__heading">
@@ -714,6 +730,10 @@
       </div>
     </div>
   </footer>
+  <button id="backToTop" class="back-to-top" aria-label="Back to top">
+    <svg viewBox="0 0 24 24" width="28" height="28"><path d="M12 19V5M5 12l7-7 7 7" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+  </button>
+
   <script src="./scripts/main.js" defer></script>
 </body>
 </html>
