--- a/case1.html
+++ b/case1.html
@@ -67,6 +67,17 @@
     </nav>
   </aside>
 
+  <aside class="case-sidenav" id="case-sidenav">
+  <nav>
+    <ul>
+      <li><a href="#nav-overview">Overview</a></li>
+      <li><a href="#nav-solution">Solution</a></li>
+      <li><a href="#nav-design">Design</a></li>
+      <li><a href="#nav-impact">Impact</a></li>
+    </ul>
+  </nav>
+</aside>
+
   <!-- Main Case Content -->
   <main>
     <!-- Hero -->
@@ -95,6 +106,7 @@
     </section>
 
     <!-- Overview -->
+    <a id="nav-overview"></a>
     <section class="case-overview" aria-labelledby="case-overview-title">
       <div class="container case-overview__content">
         <!-- Left column -->
@@ -174,6 +186,7 @@
     </section>
 
     <!-- How Might We (reusable patterns) -->
+    <a id="nav-solution"></a>
     <section class="case-howmightwe" aria-labelledby="case-howmightwe-title">
       <div class="container">
         <h2 id="case-howmightwe-title" class="case-howmightwe__heading">
@@ -416,6 +429,7 @@
     </section>
 
     <!-- Highlights -->
+    <a id="nav-design"></a>
     <section class="case-highlights" aria-labelledby="case-highlights-title">
   <div class="container">
     <h2 id="case-highlights-title" class="case-highlights__title">
@@ -566,6 +580,7 @@
 
 
     <!-- Collaboration and what's next (reusable two-column pattern) -->
+    <a id="nav-impact"></a>
     <section class="case-howmightwe">
       <h2 class="case-highlights__title case-highlights__title-no-top-margin">Collaboration and what’s next</h2>
 
@@ -708,6 +723,10 @@
       </div>
     </div>
   </footer>
+  <button id="backToTop" class="back-to-top" aria-label="Back to top">
+    <svg viewBox="0 0 24 24" width="28" height="28"><path d="M12 19V5M5 12l7-7 7 7" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+  </button>
+
   <script src="./scripts/main.js" defer></script>
 </body>
 </html>
