Fix the bug with layout of the cases

--- a/case1.html
+++ b/case1.html
@@ -67,7 +67,7 @@
     </nav>
   </aside>
 
-  <div class="case-layout">
+
     <aside class="case-sidenav" id="case-sidenav">
       <nav>
         <ul>
@@ -668,7 +668,7 @@
         <!-- Impact and learnings -->
         <div class="container">
           <div class="twocol twocol--wide">
-            <h3 class="twocol__heading">Impact and learnings</h3>
+            <h3 class="twocol__heading">Learnings</h3>
             <div class="twocol__main">
               <p>
                 During the test phase at the hospital, patients completed the digital assessment after being triaged by nurses. <strong>92% of the screener’s results matched nurse assessments.</strong> This showed that the tool was accurate and had a lot of potential!
@@ -685,7 +685,7 @@
       
       </section>
     </main>
-  </div>
+  
 
   <!-- Footer -->
   <footer class="site-footer">
