change the headings in two pages, the content

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 				<h1 class="about-hero__heading">Hello again! I’m Michelle.</h1>
 
 				<p class="about-hero__intro">
-					A Product Designer based near Vancouver, BC, with four years of experience designing digital products for both consumers and B2B users.
+					Product Designer based near Vancouver, BC, with four years of experience crafting digital products for consumers and B2B.
 				</p>
 
 				<div class="about-hero__paragraphs">
