--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 		<div class="hero__content">
 			<p class="hero__greeting">Hi! I’m Michelle.</p>
-			<h1 class="hero__title">A Product Designer<br />and an accessibility champion.</h1>
+			<h1 class="hero__title">A Product Designer<br />& accessibility advocate.</h1>
 			<p class="hero__description">
 				Designing thoughtful experiences across consumer, B2B, and SaaS products. I thrive in fast-paced environments and bring a human-centred perspective to complex systems.
 			</p>
