--- a/case1.html
+++ b/case1.html
@@ -89,6 +89,42 @@
             Streamlining pediatric ER triage with<br />
             92% accuracy
           </h1>
+          <nav class="jump-menu" aria-label="Section navigation">
+            <div class="jump-menu__card">
+              <span class="jump-menu__title">Jump to:</span>
+              <ul class="jump-menu__list">
+                <li>
+                  <a href="#nav-overview" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/target.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__label">Overview</span>
+                    <span class="jump-menu__arrow">&rarr;</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#nav-solution" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/lightbulb.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__label">Solution</span>
+                    <span class="jump-menu__arrow">&rarr;</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#nav-design" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/layout.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__label">Designs</span>
+                    <span class="jump-menu__arrow">&rarr;</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#nav-impact" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/award.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__label">Outcomes</span>
+                    <span class="jump-menu__arrow">&rarr;</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
         </div>
       </section>
 
