change the icon in a menu

--- a/case2.html
+++ b/case2.html
@@ -92,30 +92,30 @@
               <ul class="jump-menu__list">
                 <li>
                   <a href="#nav-overview" class="jump-menu__link">
-                    <span class="jump-menu__icon-bg"><img src="./assets/icons/target.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/Static Icon.svg" alt="" width="38" height="38" /></span>
                     <span class="jump-menu__label">Overview</span>
-                    <span class="jump-menu__arrow">&rarr;</span>
+                    <span class="jump-menu__arrow-bg"><img src="./assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
                 <li>
                   <a href="#nav-solution" class="jump-menu__link">
-                    <span class="jump-menu__icon-bg"><img src="./assets/icons/lightbulb.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/solution.svg" alt="" width="38" height="38" /></span>
                     <span class="jump-menu__label">Solution</span>
-                    <span class="jump-menu__arrow">&rarr;</span>
+                    <span class="jump-menu__arrow-bg"><img src="./assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
                 <li>
                   <a href="#nav-design" class="jump-menu__link">
-                    <span class="jump-menu__icon-bg"><img src="./assets/icons/layout.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/designs.svg" alt="" width="38" height="38" /></span>
                     <span class="jump-menu__label">Designs</span>
-                    <span class="jump-menu__arrow">&rarr;</span>
+                    <span class="jump-menu__arrow-bg"><img src="./assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
                 <li>
                   <a href="#nav-impact" class="jump-menu__link">
-                    <span class="jump-menu__icon-bg"><img src="./assets/icons/award.svg" alt="" width="24" height="24" /></span>
+                    <span class="jump-menu__icon-bg"><img src="./assets/icons/outcomes.svg" alt="" width="38" height="38" /></span>
                     <span class="jump-menu__label">Outcomes</span>
-                    <span class="jump-menu__arrow">&rarr;</span>
+                    <span class="jump-menu__arrow-bg"><img src="./assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
               </ul>
