Add case3.html, change the logo

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About – Michelle Parker</title>
+    <title>About – Michelle Pavlova</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header class="site-header">
 		<div class="container">
-			<a href="index.html" class="logo">Michelle Parker</a>
+			<a href="index.html" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -77,7 +77,7 @@
 				<img 
 					id="portrait"
 					src="./assets/images/portrait.jpg" 
-					alt="Portrait of Michelle Parker" 
+					alt="Portrait of Michelle Pavlova" 
 					class="about-hero__image"
 				/>
 				<p class="about-hero__caption">
@@ -169,7 +169,7 @@
   <div class="container site-footer__content">
 
     <div class="site-footer__left">
-      <p class="site-footer__name">Michelle Parker</p>
+      <p class="site-footer__name">Michelle Pavlova</p>
       <a href="mailto:hi@michelledesign.ca" class="site-footer__email">hi@michelledesign.ca</a>
       <p class="site-footer__tagline">Let’s connect!</p>
       <p class="site-footer__credit">Made with ❤️ and hojicha.</p>
