--- a/case2.html
+++ b/case2.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a href="index.html" class="logo">Michelle Parker</a>
+      <a href="index.html" class="logo">Michelle Pavlova</a>
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -731,7 +731,7 @@
   <footer class="site-footer">
     <div class="container site-footer__content">
       <div class="site-footer__left">
-        <p class="site-footer__name">Michelle Parker</p>
+        <p class="site-footer__name">Michelle Pavlova</p>
         <a href="mailto:hi@michelledesign.ca" class="site-footer__email">hi@michelledesign.ca</a>
         <p class="site-footer__tagline">Let’s connect!</p>
         <p class="site-footer__credit">Made with ❤️ and hojicha.</p>
