--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
       type="font/woff2"
       crossorigin
   >
-  <!-- <link rel="preload"
-      href="https://fonts.gstatic.com/s/inter/v19/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa1ZL7W0Q5nw.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-  > -->
-
-
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
-
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css">
 	<link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
@@ -27,7 +17,7 @@
 <body>
   <header class="site-header">
 		<div class="container">
-			<a href="index.html" class="logo">Michelle Parker</a>
+			<a href="index.html" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
 				<ul>
 					<li><a href="index.html" class="active">Home</a></li>
@@ -115,22 +105,22 @@
     <h2 class="selected-work__title">Selected Work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
-        <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
+        <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study: Streamlining pediatric ER triage"></a>
 
-     <div class="work-card-upper">
-       <div class="work-card__title-row">
-         <h3 id="work1-title" class="work-card__title">Thrive Health</h3>
-         <span class="work-card__icon-wrapper" aria-hidden="true">
-           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
-          </span>
+        <div class="work-card-upper">
+          <div class="work-card__title-row">
+            <h3 id="work1-title" class="work-card__title">Thrive Health</h3>
+            <span class="work-card__icon-wrapper" aria-hidden="true">
+              <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
+              </span>
+            </div>
+          <div class="work-card__text-block">
+            <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
+            <p class="work-card__description">
+              End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at reducing nurse burden and improving the ER experience for families.
+            </p>
+          </div>
         </div>
-      <div class="work-card__text-block">
-        <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
-        <p class="work-card__description">
-          End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at reducing nurse burden and improving the ER experience for families.
-        </p>
-      </div>
-    </div>
 
 
 
@@ -140,7 +130,7 @@
       </article>
 
 			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
-        <a href="case2.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
+        <a href="case2.html" class="work-card__link" aria-label="Read more about Thrive Health case study: Redesigning a seniors' health"></a>
 
         <div class="work-card-upper">
           <!-- <div class="work-card__general-info"> -->
@@ -166,7 +156,7 @@
       </article>
 
 			<article class="work-card work-card--yellow" aria-labelledby="work3-title" role="article">
-        <a href="" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
+        <!-- <a href="" class="work-card__link" aria-label="Read more about Heritage4future"></a> -->
 
         <div class="work-card-upper">
           <!-- <div class="work-card__general-info"> -->
@@ -199,7 +189,7 @@
   <div class="container site-footer__content">
 
     <div class="site-footer__left">
-      <p class="site-footer__name">Michelle Parker</p>
+      <p class="site-footer__name">Michelle Pavlova</p>
       <a href="mailto:hi@michelledesign.ca" class="site-footer__email">hi@michelledesign.ca</a>
       <p class="site-footer__tagline">Let’s connect!</p>
       <p class="site-footer__credit">Made with ❤️ and hojicha.</p>
