--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Case2_sample.jpg" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
+          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
         </div>
       </article>
 
@@ -177,7 +177,7 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Case3_sample.jpg"
+          <img src="./assets/images/Home_Ukraine.png"
 					alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
         </div>
       </article>
