Fix the borders and the size of the card

--- a/case2.html
+++ b/case2.html
@@ -631,7 +631,7 @@
                     alt="Image for connected living, and who is jopining it"
                     class="case-highlights__visual-image case-highlights__visual-image--wide" />
                 </div>
-                <div class="case-highlights__visual-col case-highlights__visual-col--right">
+                <div class="case-highlights__visual-col case-highlights__visual-col--right case-highlights__visual-col--right-390">
                   <img
                     src="./assets/images/Profiles_5_2.png"
                     alt="Image for connected living, and who is jopining it"
