--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 					<li><a href="#selected-work">Work</a></li>
 					<li><a href="about.html" class="active">About</a></li>
 					<li>
-						<a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer">
+						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
 							Resume
 							<img src="./assets/icons/external-link.svg" alt="" class="icon" />
 						</a>
@@ -189,13 +189,13 @@
         <h4 class="site-footer__heading">Contact</h4>
         <ul class="site-footer__list">
           <li>
-						<a href="https://linkedin.com/..." target="_blank" rel="noopener">
+						<a href="https://www.linkedin.com/in/mich-parker/" target="_blank" rel="noopener">
 							LinkedIn
 							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         	<li>
-						<a href="https://linkedin.com/..." target="_blank" rel="noopener">
+						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
 							Resume
 							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
