--- a/case2.html
+++ b/case2.html
@@ -55,7 +55,7 @@
         <li><a href="index.html#selected-work">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li>
-          <a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
+          <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
             Resume
             <img src="./assets/icons/external-link.svg" alt="" class="icon" />
           </a>
