--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio 2025</title>
+  <title>Michelle Pavlova's Portfolio</title>
   <link rel="preload"
       href="https://use.typekit.net/af/2547e5/00000000000000007736c70e/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3" 
       as="font"
@@ -163,7 +163,7 @@
             <div class="work-card__title-row">
               <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
               <span class="work-card__icon-wrapper" aria-hidden="true">
-                <img src="./assets/icons/_button-icon.svg" alt="" class="work-card__icon" />
+                <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
               </span>
             </div>
             <div class="work-card__text-block">
