Change the name of the organisation across the site

--- a/case1.html
+++ b/case1.html
@@ -84,7 +84,7 @@
       <!-- Hero -->
       <section class="case-hero" aria-labelledby="case-hero-title">
         <div class="container case-hero__content">
-          <p class="case-hero__client">Thrive Health</p>
+          <p class="case-hero__client">Everwell</p>
           <h1 class="case-hero__title" id="case-hero-title">
             Streamlining pediatric ER triage with<br />
             92% accuracy
