--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     <h2 class="selected-work__title">Selected Work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
-        <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study: Streamlining pediatric ER triage"></a>
+        <a href="case1.html" class="work-card__link" aria-label="Read more about Everwell case study: Streamlining pediatric ER triage"></a>
 
         <div class="work-card-upper">
           <div class="work-card__title-row">
-            <h3 id="work1-title" class="work-card__title">Thrive Health</h3>
+            <h3 id="work1-title" class="work-card__title">EVERWELL</h3>
             <span class="work-card__icon-wrapper" aria-hidden="true">
               <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
               </span>
@@ -125,17 +125,17 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_CHEO_Title_V1.png" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
+          <img src="./assets/images/Home_CHEO_Title_V1.png" alt="Screenshot of the Everwell triage tool" class="work-card__image" />
         </div>
       </article>
 
 			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
-        <a href="case2.html" class="work-card__link" aria-label="Read more about Thrive Health case study: Redesigning a seniors' health"></a>
+        <a href="case2.html" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
 
         <div class="work-card-upper">
           <!-- <div class="work-card__general-info"> -->
             <div class="work-card__title-row">
-              <h3 id="work2-title" class="work-card__title work-card__title--blue">Thrive Health</h3>
+              <h3 id="work2-title" class="work-card__title work-card__title--blue">EVERWELL</h3>
               <span class="work-card__icon-wrapper" aria-hidden="true">
                 <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
               </span>
@@ -151,7 +151,7 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
+          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell triage tool" class="work-card__image" />
         </div>
       </article>
 
@@ -178,7 +178,7 @@
 
         <div class="work-card__image-wrapper">
           <img src="./assets/images/Home_Ukraine.png"
-					alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
+					alt="Screenshot of the Everwell triage tool" class="work-card__image" />
         </div>
       </article>
     </div>
