--- a/case2.html
+++ b/case2.html
@@ -82,7 +82,7 @@
       <!-- Hero -->
       <section class="case-hero" aria-labelledby="case-hero-title">
         <div class="container case-hero__content">
-          <p class="case-hero__client">Thrive Health</p>
+          <p class="case-hero__client">Everwell</p>
           <h1 class="case-hero__title" id="case-hero-title">
             Redesigning a seniors' health app for clarity and engagement
           </h1>
