Patch the icons placements in the homepage cards

--- a/case1.html
+++ b/case1.html
@@ -212,7 +212,7 @@
                 <ul class="case-context__list">
                   <li>Mapping the full triage journey with clinicians and admin staff</li>
                   <li>Conducting competitor and paper research</li>
-                  <li>Co-designing patient-facing flows for TVs and tablets with the clinical team</li>
+                  <li>Co-designing patient-facing flows for mobile and tablets with the clinical team</li>
                   <li>Designing high-contrast, WCAG-compliant UI to support quick scanning in high-stress settings</li>
                   <li>Collaborating closely with a PM and devs to ensure feasibility within clinical constraints</li>
                 </ul>
@@ -489,7 +489,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
-              <div class="twocol twocol--wide">
+              <div class="twocol twocol--wide twocol twocol--wide-mg40">
                 <h3 class="twocol__heading">Homepage</h3>
                 <div class="twocol__main">
                   <p>
@@ -516,7 +516,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
-              <div class="twocol twocol--wide">
+              <div class="twocol twocol--wide twocol--wide-mg40">
                 <h3 class="twocol__heading">Intro screen</h3>
                 <div class="twocol__main">
                   <p>
@@ -546,7 +546,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
               </div>
-              <div class="twocol twocol--wide">
+              <div class="twocol twocol--wide twocol--wide-mg40">
                 <h3 class="twocol__heading">How old are you?</h3>
                 <div class="twocol__main">
                   <p>
@@ -573,7 +573,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
-              <div class="twocol twocol--wide">
+              <div class="twocol twocol--wide twocol--wide-mg40">
                 <h3 class="twocol__heading">Getting results</h3>
                 <div class="twocol__main">
                   <p>
