--- a/index.html
+++ b/index.html
@@ -106,14 +106,12 @@
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
         <a href="case1.html" class="work-card__link" aria-label="Read more about Everwell case study: Streamlining pediatric ER triage"></a>
+        <span class="work-card__icon-abs" aria-hidden="true">
+          <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
+        </span>
 
         <div class="work-card-upper">
-          <div class="work-card__title-row">
-            <h3 id="work1-title" class="work-card__title">EVERWELL</h3>
-            <span class="work-card__icon-wrapper" aria-hidden="true">
-              <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
-              </span>
-            </div>
+          <h3 id="work1-title" class="work-card__title">EVERWELL</h3>
           <div class="work-card__text-block">
             <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
             <p class="work-card__description">
@@ -131,22 +129,18 @@
 
 			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
         <a href="case2.html" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
+        <span class="work-card__icon-abs" aria-hidden="true">
+          <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
+        </span>
 
         <div class="work-card-upper">
-          <!-- <div class="work-card__general-info"> -->
-            <div class="work-card__title-row">
-              <h3 id="work2-title" class="work-card__title work-card__title--blue">EVERWELL</h3>
-              <span class="work-card__icon-wrapper" aria-hidden="true">
-                <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
-              </span>
-            </div>
+            <h3 id="work2-title" class="work-card__title work-card__title--blue">EVERWELL</h3>
             <div class="work-card__text-block">
               <p class="work-card__subtitle">Redesigning a seniors' health app for clarity and engagement</p>
               <p class="work-card__description">
                 Transformed a basic MVP into a full-featured wellness platform, creating a more intuitive, accessible experience tailored to older users.
               </p>
             </div>
-          <!-- </div> -->
         </div>
 
 
@@ -157,22 +151,18 @@
 
 			<article class="work-card work-card--yellow" aria-labelledby="work3-title" role="article">
         <!-- <a href="" class="work-card__link" aria-label="Read more about Heritage4future"></a> -->
+        <span class="work-card__icon-abs" aria-hidden="true">
+          <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
+        </span>
 
         <div class="work-card-upper">
-          <!-- <div class="work-card__general-info"> -->
-            <div class="work-card__title-row">
-              <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
-              <span class="work-card__icon-wrapper" aria-hidden="true">
-                <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
-              </span>
-            </div>
+            <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
             <div class="work-card__text-block">
               <p class="work-card__subtitle">Coming soon: Improving impact through storytelling</p>
               <p class="work-card__description">
                 Redesigned a donation-based charity website to strengthen narrative, leading to a 31% rise in unique visitors and over $70,000 raised in the next campaign cycle.
               </p>
             </div>
-          <!-- </div> -->
         </div>
 
 
