--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="font/woff2"
       crossorigin
   >
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css">
 	<link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
