--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
         <h4 class="site-footer__heading">Contact</h4>
         <ul class="site-footer__list">
           <li>
-						<a href="https://www.linkedin.com/in/mich-parker/" target="_blank" rel="noopener">
+						<a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
 							LinkedIn
 							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
